minor spacing fix

--- a/src/app/shared/components/comments-history/view-comment/view-comment.component.scss
+++ b/src/app/shared/components/comments-history/view-comment/view-comment.component.scss
@@ -14,6 +14,7 @@
     font-size: 14px;
     text-transform: capitalize;
     font-weight: 400;
+    width: 100%;
   }
 
   &--card {
