--- a/src/global.scss
+++ b/src/global.scss
@@ -693,7 +693,3 @@ ref - https://stackoverflow.com/a/31162426
   box-shadow: 0px -2px 40px rgba(215, 215, 215, 0.5);
   border-radius: 8px;
 }
-
-.md .btn-history {
-  min-width: 156px;
-}
